# Bulk-MKV-Manipulation

./: Cargo.toml  README.md  build.rs  paths.json
src/: conversion_props.rs  converters.rs  enums.rs  file_processor.rs  input_profile.rs  logger.rs  main.rs  media_file.rs  media_info.rs  media_process_params.rs  mkvtoolnix.rs  paths.rs  script_file.rs  substitutions.rs  utils.rs
src/conversion_params/: audio.rs  mod.rs  params.rs  params_trait.rs  subtitle.rs  unified.rs  video.rs
