[package]
name = "bulk-mkv-manipulation"
version = "0.1.0"
authors = ["Ryan Jones-Ward <sciguyryan@gmail.com>"]
edition = "2021"
readme = "README.md"
description = "An automatic bulk MKV manipulation tool."
license = "LGPL 2.1"
repository = "https://github.com/sciguyryan/Bulk-MKV-Manipulation"
homepage = "https://github.com/sciguyryan/Bulk-MKV-Manipulation"
build = "build.rs"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5.0"
lexical-sort = "0.3.1"
hashbrown = "0.14.5"
rand = "0.8.5"
regex = "1.10.6"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
system_shutdown = "4.0.1"
titlecase = "3.3.0"
trash = "5.1.1"
walkdir = "2.5.0"

[features]
default = ["logging"]
logging = []

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = true
#panic = "abort"
